Автозагрузка страницы с дз после авторизации

--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
                                         });
                                     });
                                 });
-                                contentwrap.fadeIn(500);
+                                $('#maincontent').load("pages/" + $('[act]').first().attr('act'), function () {
+                                    contentwrap.fadeIn(500);
+                                });
+                                
                             }
                             else if(data.hasOwnProperty("error"))
                             {
